# parabox

./: .gitignore  Cargo.toml  README.md
levels/vanilla/: 1by1_clone_flower.solution  1by1_clone_flower.txt  1by1_inf.solution  1by1_inf.txt  1by1_order_line.solution  1by1_order_line.txt  1by1_playerr_flip2.solution  1by1_playerr_flip2.txt  1by1_possess_v3.solution  1by1_possess_v3.txt  1by1_poswall_silliness.solution  1by1_poswall_silliness.txt  1by1_stack.solution  1by1_stack.txt  2by2.solution  2by2.txt  3_and_9.solution  3_and_9.txt  3by3_fun_clone_heist.solution  3by3_fun_clone_heist.txt  3by3ref.solution  3by3ref.txt  4by4_linear.solution  4by4_linear.txt  5by1.solution  5by1.txt  7by1_careful_stowaway.solution  7by1_careful_stowaway.txt  7by3ref.solution  7by3ref.txt  align_setup_transfer.solution  align_setup_transfer.txt  align_setup_transfer_flip.solution  align_setup_transfer_flip.txt  break_in.solution  break_in.txt  cage.solution  cage.txt  cage_hard_0.solution  cage_hard_0.txt  (+687 more)
src/: lib.rs  main.rs
src/engine/: game.rs  simulation.rs  utility.rs
tests/: levels.rs
