[package]
name = "parabox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "parabox"
required-features = ["text-ui"]

[features]
default = ["text-ui"]
text-ui = ["dep:crossterm"]

[dependencies]
color_space = "0.5.3"
crossterm = { version = "0.26.1", optional = true }
num-rational = "0.4.1"
